Fix 100vh issue on mobile devices

--- a/src/components/navbar/menu/menuItem.module.css
+++ b/src/components/navbar/menu/menuItem.module.css
@@ -7,6 +7,7 @@
   height: 48px;
   width: 100%;
   position: relative;
+  user-select: none;
 }
 
 .title {
