--- a/src/index.css
+++ b/src/index.css
@@ -26,13 +26,20 @@
 }
 
 html {
-  height: 100%;
+  height: fit-content;
+  height: fill-available;
+  height: -webkit-fill-available;
 }
 
 body {
   background-color: white;
   font-family: "Mulish", sans-serif;
   height: 100%;
+
+  min-height: 100vh;
+  min-height: fill-available;
+  min-height: -webkit-fill-available;
+
   width: 100vw;
   overscroll-behavior-x: none;
   scroll-behavior: smooth;
